raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-38-50.ceg/compilation.txt
NT.java:11: error: class Fight is public, should be declared in a file named Fight.java
public class Fight {
       ^
1 error
Not compiled
